--- a/index.html
+++ b/index.html
@@ -225,14 +225,14 @@
   		document.onreadystatechange = function() {
   			if (document.readyState !== "complete") {
   				document.querySelector(
-  				".container").style.visibility = "hidden";
+  				"body").style.visibility = "hidden";
   				document.querySelector(
   				".loader").style.visibility = "visible";
   			} else {
   				document.querySelector(
   				".loader").style.display = "none";
   				document.querySelector(
-  				".container").style.visibility = "visible";
+  				"body").style.visibility = "visible";
   			}
   		};
   	</script>
